fixed bug where lost books counted as returned books.